# git-ui

./: .gitignore  CMakeLists.txt  README.md  generate.bat
src/: CMakeLists.txt  main.cpp
